# training

./: README.md
Dell/: README.md
Dell/benchmarks/llama2_70b_lora/implementations/nemo/: README.md  custom_callbacks.py  nemo-llama3-lora-sft-a3-ultra-md.yaml  train.py  train_orig_changes.py
Dell/benchmarks/llama2_70b_lora/implementations/nemo/tmp_scripts/: nemo-lora-tuning.sh
dell_nemo/: cloudbuild.yaml  nemo-llama3-lora-sft-a3-ultra-md.yaml
dell_nemo/tmp_scripts/: megatron_gpt_peft_tuning_config.yaml  nemo-lora-tuning.sh  train.py
dp-repro/: Dockerfile  cloudbuild.yaml  deepspeed-train-h100.yaml  deepspeed-train-h200.yaml  deepspeed-train.yaml  demo.sh
dp-repro/app/: poetry.lock0  pyproject.toml  run_clm_sft_mlflow-original.py  run_clm_sft_mlflow.py  training.sh
llama2_70b_lora/: Dockerfile  asustek_nemo_config.yaml  cloudbuild.yaml  llama3-lora-sft-a3-ultra-md.yaml  llama3-lora-sft-a3-ultra.yaml  nemo-llama3-lora-sft-a3-ultra.yaml  requirements.txt  simple-test.yaml  training.sh
llama2_70b_lora/configs/: deepspeed.json  deepspeed0.json  deepspeed1.json  default_config.yaml  default_config0.yaml
llama2_70b_lora/scripts/: train.py  training.sh  utils.py
llama2_70b_lora/tmp_scripts/: README.md  train.py  training.sh
nemo_llama2_70b_lora/: Dockerfile  cloudbuild.yaml  nemo-llama3-lora-sft-a3-ultra.yaml  nemo-lora-tuning.sh  requirements.txt  train.py
nemo_llama2_70b_lora/conf/: megatron_gpt_peft_tuning_config.yaml
