[tool.poetry]
name = "nlp-pytorch-training"
version = "0.1.0"
description = ""
authors = ["Tahmid Rahman <tahmid.rahman@dialpad.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10.2,<3.12"
torch = ">=2.6.0,<2.7.0"
huggingface-hub = {extras = ["cli"], version = "^0.30"}
pandas = "*"
datasets = ">=2.19.1,<3.0.0"
evaluate = ">=0.4.2,<1.0.0"
accelerate = ">=1.0.1,<2.0.0"
scikit-learn = ">=1.5.0,<2.0.0"
nltk = ">=3.8.1,<4.0.0"
flash-attn = {url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu12torch2.6cxx11abiFALSE-cp311-cp311-linux_x86_64.whl"}
sentencepiece = ">=0.2.0,<1.0.0"
cupy-cuda12x = ">=13.0.0,<14.0.0"
ninja = ">=1.11.1.1,<2.0.0.0"
setuptools = ">=80.9.0,<81.0.0"
mpi4py = ">=4.0.0,<5.0.0"
transformers = ">4.51.0,<=4.52.0"
deepspeed = ">=0.15.4,<0.15.5"
mlflow = "^2.0" 
peft = "0.8.2"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

